tests/snapshots/snapshot_tests__migration_current_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "migration_current.poly",
            namespaces: [
                NamespaceDef {
                    name: "game.data",
                    datasource: Some(
                        "sqlite",
                    ),
                    items: [
                        Struct(
                            StructDef {
                                name: "ItemTable",
                                fqn: "game.data.ItemTable",
                                datasource: Some(
                                    "sqlite",
                                ),
                                cache_strategy: None,
                                is_readonly: false,
                                soft_delete_field: None,
                                header: [],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [
                                                "Key",
                                            ],
                                            is_primary_key: true,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "name",
                                            field_type: TypeRef {
                                                original: "string",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "string",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "price",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "description",
                                            field_type: TypeRef {
                                                original: "Option<string>",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "Option<string>",
                                                is_primitive: false,
                                                is_struct: true,
                                                is_enum: false,
                                                is_option: true,
                                                is_list: false,
                                                inner_type: Some(
                                                    TypeRef {
                                                        original: "string",
                                                        fqn: "string",
                                                        namespace_fqn: "",
                                                        type_name: "string",
                                                        parent_type_path: "",
                                                        lang_type: "string",
                                                        is_primitive: true,
                                                        is_struct: false,
                                                        is_enum: false,
                                                        is_option: false,
                                                        is_list: false,
                                                        inner_type: None,
                                                    },
                                                ),
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Comment(
                                        "NEW: nullable description",
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "category",
                                            field_type: TypeRef {
                                                original: "string",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "string",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Comment(
                                        "NEW: required category",
                                    ),
                                ],
                                indexes: [
                                    IndexDef {
                                        name: "ById",
                                        fields: [
                                            IndexFieldDef {
                                                name: "id",
                                                field_type: TypeRef {
                                                    original: "u32",
                                                    fqn: "u32",
                                                    namespace_fqn: "",
                                                    type_name: "u32",
                                                    parent_type_path: "",
                                                    lang_type: "u32",
                                                    is_primitive: true,
                                                    is_struct: false,
                                                    is_enum: false,
                                                    is_option: false,
                                                    is_list: false,
                                                    inner_type: None,
                                                },
                                            },
                                        ],
                                        is_unique: true,
                                        source: "constraint",
                                    },
                                ],
                                relations: [],
                            },
                        ),
                        Struct(
                            StructDef {
                                name: "BuffTable",
                                fqn: "game.data.BuffTable",
                                datasource: Some(
                                    "sqlite",
                                ),
                                cache_strategy: None,
                                is_readonly: false,
                                soft_delete_field: None,
                                header: [
                                    Comment(
                                        "SkillTable removed",
                                    ),
                                    Comment(
                                        "NEW table",
                                    ),
                                ],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "id",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [
                                                "Key",
                                            ],
                                            is_primary_key: true,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "name",
                                            field_type: TypeRef {
                                                original: "string",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "string",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "duration",
                                            field_type: TypeRef {
                                                original: "u32",
                                                fqn: "u32",
                                                namespace_fqn: "",
                                                type_name: "u32",
                                                parent_type_path: "",
                                                lang_type: "u32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "effect",
                                            field_type: TypeRef {
                                                original: "string",
                                                fqn: "string",
                                                namespace_fqn: "",
                                                type_name: "string",
                                                parent_type_path: "",
                                                lang_type: "string",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                        },
                                    ),
                                ],
                                indexes: [
                                    IndexDef {
                                        name: "ById",
                                        fields: [
                                            IndexFieldDef {
                                                name: "id",
                                                field_type: TypeRef {
                                                    original: "u32",
                                                    fqn: "u32",
                                                    namespace_fqn: "",
                                                    type_name: "u32",
                                                    parent_type_path: "",
                                                    lang_type: "u32",
                                                    is_primitive: true,
                                                    is_struct: false,
                                                    is_enum: false,
                                                    is_option: false,
                                                    is_list: false,
                                                    inner_type: None,
                                                },
                                            },
                                        ],
                                        is_unique: true,
                                        source: "constraint",
                                    },
                                ],
                                relations: [],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
    ],
}
