tests/snapshots/snapshot_tests__named_embed_ast.snap
---
source: tests/snapshot_tests.rs
expression: all_asts
---
[
    AstRoot {
        path: "tests/schemas\\named_embed.poly",
        file_imports: [],
        definitions: [
            Embed(
                Embed {
                    metadata: [],
                    name: Some(
                        "Position",
                    ),
                    members: [
                        Field(
                            Regular(
                                RegularField {
                                    metadata: [],
                                    name: Some(
                                        "x",
                                    ),
                                    field_type: TypeWithCardinality {
                                        base_type: Basic(
                                            F32,
                                        ),
                                        cardinality: None,
                                    },
                                    constraints: [],
                                    field_number: None,
                                },
                            ),
                        ),
                        Field(
                            Regular(
                                RegularField {
                                    metadata: [],
                                    name: Some(
                                        "y",
                                    ),
                                    field_type: TypeWithCardinality {
                                        base_type: Basic(
                                            F32,
                                        ),
                                        cardinality: None,
                                    },
                                    constraints: [],
                                    field_number: None,
                                },
                            ),
                        ),
                        Field(
                            Regular(
                                RegularField {
                                    metadata: [],
                                    name: Some(
                                        "z",
                                    ),
                                    field_type: TypeWithCardinality {
                                        base_type: Basic(
                                            F32,
                                        ),
                                        cardinality: None,
                                    },
                                    constraints: [],
                                    field_number: None,
                                },
                            ),
                        ),
                    ],
                },
            ),
        ],
    },
]
