tests/snapshots/snapshot_tests__named_embed_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "named_embed.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Struct(
                            StructDef {
                                name: "Position",
                                fqn: "Position",
                                is_embed: true,
                                datasource: None,
                                cache_strategy: None,
                                load: None,
                                is_readonly: false,
                                soft_delete_field: None,
                                pack_separator: None,
                                header: [],
                                items: [
                                    Field(
                                        FieldDef {
                                            name: "x",
                                            field_type: TypeRef {
                                                original: "f32",
                                                fqn: "f32",
                                                namespace_fqn: "",
                                                type_name: "f32",
                                                parent_type_path: "",
                                                lang_type: "f32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "y",
                                            field_type: TypeRef {
                                                original: "f32",
                                                fqn: "f32",
                                                namespace_fqn: "",
                                                type_name: "f32",
                                                parent_type_path: "",
                                                lang_type: "f32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                    Field(
                                        FieldDef {
                                            name: "z",
                                            field_type: TypeRef {
                                                original: "f32",
                                                fqn: "f32",
                                                namespace_fqn: "",
                                                type_name: "f32",
                                                parent_type_path: "",
                                                lang_type: "f32",
                                                is_primitive: true,
                                                is_struct: false,
                                                is_enum: false,
                                                is_option: false,
                                                is_list: false,
                                                inner_type: None,
                                            },
                                            attributes: [],
                                            is_primary_key: false,
                                            is_unique: false,
                                            is_index: false,
                                            foreign_key: None,
                                            max_length: None,
                                            default_value: None,
                                            range: None,
                                            regex_pattern: None,
                                            auto_create: None,
                                            auto_update: None,
                                            search_index: None,
                                        },
                                    ),
                                ],
                                indexes: [],
                                refs: [],
                                relations: [],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
    ],
}
