tests/snapshots/snapshot_tests__named_enum_ast.snap
---
source: tests/snapshot_tests.rs
expression: all_asts
---
[
    AstRoot {
        path: "tests/schemas\\named_enum.poly",
        file_imports: [],
        definitions: [
            Enum(
                Enum {
                    metadata: [],
                    name: Some(
                        "UserStatus",
                    ),
                    variants: [
                        EnumVariant {
                            metadata: [],
                            name: Some(
                                "Active",
                            ),
                            value: None,
                        },
                        EnumVariant {
                            metadata: [],
                            name: Some(
                                "Inactive",
                            ),
                            value: None,
                        },
                        EnumVariant {
                            metadata: [],
                            name: Some(
                                "Banned",
                            ),
                            value: None,
                        },
                    ],
                },
            ),
        ],
    },
]
