tests/snapshots/snapshot_tests__named_enum_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "named_enum.poly",
            namespaces: [
                NamespaceDef {
                    name: "",
                    datasource: None,
                    items: [
                        Enum(
                            EnumDef {
                                name: "UserStatus",
                                fqn: "UserStatus",
                                items: [
                                    Member(
                                        EnumMember {
                                            name: "Active",
                                            value: Some(
                                                0,
                                            ),
                                        },
                                    ),
                                    Member(
                                        EnumMember {
                                            name: "Inactive",
                                            value: Some(
                                                1,
                                            ),
                                        },
                                    ),
                                    Member(
                                        EnumMember {
                                            name: "Banned",
                                            value: Some(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ],
        },
    ],
}
